# Cue-Controller

./: Cargo.toml  README.md  bacon.toml
src/: main.rs  test.rs
src/common/: cue.rs  mod.rs  workspace.rs
src/engine/: mod.rs
src/ui/: mod.rs  persistence.rs  styles.rs
src/ui/components/: active_cues_bar.rs  cue_table.rs  go_button.rs  header.rs  mod.rs  toolbar.rs
src/ui/views/: control_deck.rs  mod.rs
